<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

<RelativeLayout
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/form_inserimento"
        android:text="@string/form_inserimento_cliente"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nome_cliente"
        android:singleLine="true"
        android:layout_margin="10dp"
        android:hint="@string/inserisci_nome"
        android:layout_width="match_parent"
        android:layout_below="@id/form_inserimento"
        android:inputType="text"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cognome_cliente"
        android:layout_margin="10dp"
        android:singleLine="true"
        android:hint="@string/inserisci_cognome"
        android:layout_below="@id/nome_cliente"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/citta_cliente"
        android:layout_margin="10dp"
        android:singleLine="true"
        android:hint="@string/inserisci_citta"
        android:layout_below="@id/cognome_cliente"
        android:layout_width="match_parent"
        android:inputType="text"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/cap_cliente"
        android:singleLine="true"
        android:layout_margin="10dp"
        android:hint="@string/inserisci_cap"
        android:layout_below="@id/citta_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/inserisci_sesso"
        android:singleLine="true"
        android:layout_margin="10dp"
        android:hint="@string/inserisci_sesso"
        android:layout_below="@id/cap_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_below="@id/inserisci_sesso"
        android:layout_width="match_parent"
        android:entries="@array/sesso_cliente"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/cod_fiscale_cliente"
        android:layout_margin="10dp"
        android:singleLine="true"
        android:hint="@string/inserisci_codice_fiscale"
        android:layout_below="@id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/telefono_cliente"
        android:layout_margin="10dp"
        android:singleLine="true"
        android:hint="@string/inserisci_telefono"
        android:layout_below="@id/cod_fiscale_cliente"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/indirizzo_cliente"
        android:layout_margin="10dp"
        android:singleLine="true"
        android:hint="@string/inserisci_indirizzo"
        android:layout_below="@id/telefono_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/add_cliente"
        android:layout_margin="10dp"
        android:background="@color/colorAccent"
        android:text="@string/register_cliente"
        android:layout_below="@id/indirizzo_cliente"
        android:layout_centerInParent="true"
        android:onClick="addCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>

</ScrollView>