<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/applogo"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:src="@drawable/ic_directions_car_black_24dp" />

    <TextView
        android:id="@+id/appname"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/applogo"
        />

    <EditText
        android:id="@+id/register_activity_rag_sociale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/rag_sociale"
        android:layout_marginTop="50dp"
        android:layout_below="@id/appname"
        />

    <EditText
        android:id="@+id/register_activity__p_iva"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/p_iva"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_activity_rag_sociale"
        />

    <EditText
        android:id="@+id/register_activity__email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/email_hint"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_activity__p_iva"
        />

    <EditText
        android:id="@+id/register_activity__password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/password_hint"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_activity__email"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/register_activity__num_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/num_telefono"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_activity__password"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/register_activity__indirizzo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/indirizzo"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_activity__num_telefono"
        />

       <Button
            android:id="@+id/register_activity_register"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/textinAccent"
            android:background="@color/colorPrimary"
            android:layout_margin="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/register_activity__indirizzo"
            android:onClick="registerOfficina"
        />

</RelativeLayout>

</ScrollView>