<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/applogo"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:layout_above="@id/login_activity_email"
        android:layout_centerVertical="true"
        android:layout_margin="50dp"
        android:src="@drawable/ic_directions_car_black_24dp" />

    <TextView
        android:id="@+id/appname"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_above="@id/login_activity_email"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        />


    <EditText
        android:id="@+id/login_activity_email"
        android:layout_margin="5dp"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

    <EditText
        android:id="@+id/login_activity_password"
        android:layout_margin="5dp"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/login_activity_email"
        />

    <Button
        android:id="@+id/login_activity_button_login"
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_activity_password"
        android:onClick="officinaLogin"
        />

    <Button
        android:id="@+id/login_activity_button_register"
        android:text="@string/register"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_activity_button_login"
        android:onClick="goToRegisterActivity"
        />


</RelativeLayout >