<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/area_cliente_search_text"
        android:hint="@string/search_cliente_hint"
        android:inputType="text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:importantForAutofill="no" />

    <ImageButton
        android:id="@+id/area_cliente_search_button"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/area_cliente_search_text"
        android:background="@drawable/ic_search_black_24dp"
        android:contentDescription="@string/search_cliente_hint"
        android:onClick="searchCliente" />



    <Button
        android:id="@+id/area_clienti_register_cliente"
        android:text="@string/register_cliente"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_below="@id/area_cliente_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="registerCliente"/>

    <TextView
        android:id="@+id/area_clienti_lista_clienti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lista_clienti"
        android:textStyle="bold"
        android:textColor="@color/design_default_color_on_secondary"
        android:layout_below="@id/area_clienti_register_cliente"
        android:layout_centerInParent="true"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/scroll_view_area_clienti"
        android:layout_below="@id/area_clienti_lista_clienti"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/area_cliente_recycle_view_lista_cliente"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>